# finance-downloader

./: .env.example  .gitignore  README.md  core.py  downloader.py  main.py  provider.py  pyproject.toml  requirements.txt  time_guard.py
finloader/: cli.py  core.py  downloader.py  exceptions.py  provider.py  schema.py
finloader/provider/: __init__.py  alpha_vantage.py  base.py  massive.py  twelve_data.py
tools/: update_alpha_vantage.sh  update_massive.sh  update_twelve_data.sh
